Api controller  veiw없는 간단한  실습하기

--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -1,5 +1,7 @@
 <html xmlns:th ="http://www.thymeleaf.org">
 <body>
-    <p th:text="Hello"+${name}>hello!empty</p>
+    <p th:text="'Hello'+${name}">hello!empty</p>
+
+
 </body>
 </html>
