--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -2,7 +2,7 @@
 <html xmlns:th ="http://www.thymeleaf.org">
     <body>
         <div>
-            <h1>HomePage</h1>
+            <h1>게시판 </h1>
             <p> 회원기능 </p>
             <p>
                 <a href="/members/new">회원가입</a>
